<resources>
    <string name="app_name">出行</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="account">用户名／邮箱</string>
    <string name="password">密码</string>
    <string name="username">用户名</string>
    <string name="email">邮箱</string>
    <string name="re_password">确认密码</string>
    <string name="login">登录</string>
    <string name="register_account">注册账号</string>
    <string name="register">注册</string>
    <string name="forget_password">忘记密码</string>
    <string name="error_invalid_email">邮箱格式错误</string>
    <string name="error_invalid_password">密码长度至少6位</string>
    <string name="error_same_password">密码不一致</string>
    <string name="error_field_required">必填项</string>
    <string name="login_fail">登录失败，请仔细检查账号密码</string>
    <string name="already_email">此邮箱已注册</string>
    <string name="already_username">此用户名已注册</string>
    <string name="no_username">用户名不存在</string>
    <string name="error_password">密码错误</string>
    <string name="reset_password">重置密码</string>
    <string name="userinfo_overdue">用户信息过期，请重新登录</string>
    <string name="logout">退出当前帐号</string>
    <string name="submit">提交</string>
    <string name="info">路线详情</string>
    <string name="title_main">主页</string>
    <string name="title_others">其他页面</string>
    <string name="title_setting">设置</string>
    <string name="error_head_replace">头像上传失败</string>
</resources>
