<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:checked="true"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/title_main" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/title_others" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/title_setting" />
    </group>

    <item android:title="交流与联系">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="分享应用" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@android:drawable/ic_delete"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
